salesforce/force-app/main/default/objects/Lead/fields/Creator_Signals__c.field-meta.xml
<CustomField>
    <fullName>Creator_Signals__c</fullName>
    <description>Signs of creator or influencer programs found on the company's website.</description>
    <label>Creator Signals</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>