salesforce/force-app/main/default/objects/Lead/fields/Employee_Band__c.field-meta.xml
<CustomField>
    <fullName>Employee_Band__c</fullName>
    <description>Company size band extracted from the company's website.</description>
    <label>Employee Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-10</fullName>
            </value>
            <value>
                <fullName>11-50</fullName>
            </value>
            <value>
                <fullName>51-200</fullName>
            </value>
            <value>
                <fullName>201-1000</fullName>
            </value>
            <value>
                <fullName>1001-5000</fullName>
            </value>
            <value>
                <fullName>5000+</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>