salesforce/force-app/main/default/objects/Lead/fields/Enriched_At__c.field-meta.xml
<CustomField>
    <fullName>Enriched_At__c</fullName>
    <description>When the enrichment service last wrote its fields.</description>
    <label>Enriched At</label>
    <type>DateTime</type>
</CustomField>