salesforce/force-app/main/default/objects/Lead/fields/Enrichment_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Evidence__c</fullName>
    <description>Website quotes supporting the extracted facts, checked against the page text.</description>
    <label>Enrichment Evidence</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>