salesforce/force-app/main/default/objects/Lead/fields/Enrichment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Summary__c</fullName>
    <description>Short summary of the company from the enrichment.</description>
    <label>Enrichment Summary</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>