salesforce/force-app/main/default/objects/Lead/fields/ICP_Reasons__c.field-meta.xml
<CustomField>
    <fullName>ICP_Reasons__c</fullName>
    <description>Reasons behind the ICP score, one per rule that applied.</description>
    <label>ICP Reasons</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>