salesforce/force-app/main/default/objects/Lead/fields/ICP_Score__c.field-meta.xml
<CustomField>
    <fullName>ICP_Score__c</fullName>
    <description>ICP score computed by the enrichment service's versioned rules.</description>
    <label>ICP Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>