salesforce/force-app/main/default/objects/Lead/fields/ICP_Tier__c.field-meta.xml
<CustomField>
    <fullName>ICP_Tier__c</fullName>
    <description>Tier derived from the ICP score by the enrichment service's rules.</description>
    <label>ICP Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>