salesforce/force-app/main/default/objects/Lead/fields/Reviewed_At__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_At__c</fullName>
    <description>When the lead was approved or rejected in Slack.</description>
    <label>Reviewed At</label>
    <type>DateTime</type>
</CustomField>