salesforce/force-app/main/default/objects/Lead/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <description>Person who approved or rejected the lead in Slack.</description>
    <label>Reviewed By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>