salesforce/force-app/main/default/objects/Lead/fields/Rules_Version__c.field-meta.xml
<CustomField>
    <fullName>Rules_Version__c</fullName>
    <description>Version of the scoring rules that produced the ICP score.</description>
    <label>Rules Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>